--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 server.port=9090
-spring.messages.basename=messages
+spring.messages.basename=messages,errors
+server.servlet.session.tracking-modes=cookie
