--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 server.port=9090
 spring.messages.basename=messages,errors
 server.servlet.session.tracking-modes=cookie
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/toyproject?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+# DB username
+spring.datasource.username=root
+# DB password
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
