--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/toyproject?useSSL=false&useUni
 # DB username
 spring.datasource.username=root
 # DB password
-spring.datasource.password=root
+spring.datasource.password=springproject
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
