--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.messages.basename=messages,errors
 server.servlet.session.tracking-modes=cookie
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/toyproject?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/toyproject?useSSL=true&useUnicode=true&serverTimezone=Asia/Seoul
 # DB username
 spring.datasource.username=root
 # DB password
