--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// json parsing library
+	implementation 'org.json:json:20230227'
+	implementation 'org.jsoup:jsoup:1.15.4'
 }
 
 tasks.named('test') {
