--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,11 @@ dependencies {
 
 	// json parsing library
 	implementation 'org.json:json:20230227'
+
+
+	// 카카오 로그인
+	implementation 'com.google.code.gson:gson:2.8.7'
+//	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
 tasks.named('test') {
