FEAT: google api login 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,12 @@ spring.datasource.password=springproject
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
+
+#google login api
+google.auth.token.url=https://oauth2.googleapis.com/token
+google.login.url=https://accounts.google.com
+google.redirect.uri=http://localhost:9090/google/login/callback
+google.client.id=399807541925-60ahn74qo4hpldia7dl4ne2gknkvac7a.apps.googleusercontent.com
+google.secret=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
+google.userinfo.request.url=https://www.googleapis.com/oauth2/v1/userinfo
+google.auth.scope=profile,email,openid
